# open-civ-vi

./: .ARCHITECTURE.md.swp  .ARCHITECTURE_COMMENTS.md.swp  .dockerignore  .gitignore  AGENTS.md  AGENT_COMMENTS.md  AGENT_COMMENT_CLARIFICATIONS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
agents/: README.md  add-game-content.md  add-rules-engine-method.md  advance-turn-phase.md  delete-todo.md  implement-roadmap-feature.md  make-todo.md  modify-todo.md  write-integration-test.md
book/: book.toml
book/src/: SUMMARY.md  getting-started.md  introduction.md  roadmap.md
book/src/architecture/: libciv.md  libhexgrid.md  overview.md  server-and-web.md
book/src/design/: diff-system.md  extensibility.md  id-system.md  modifier-system.md
book/src/game-systems/: ai.md  cities.md  civilizations.md  culture-and-tourism.md  diplomacy.md  districts-and-buildings.md  era-system.md  governors.md  great-people.md  map-generation.md  religion.md  research.md  trade.md  units-and-combat.md  victory.md  world.md
book/src/multiplayer/: protocol.md  server.md  web-client.md
book/src/roadmap/: civsim-cli.md  diff-consolidation.md  gathering-storm.md  gs-climate-disasters.md  gs-content.md  gs-power-grid.md  gs-world-congress.md  next-steps.md  ongoing.md  parity-content.md  parity-systems.md  parity-trees.md  parity-values.md  parity.md  phase2-great-people-recruitment.md  phase2-natural-wonder-discovery.md  phase2-strategic-resource-consumption.md  phase3-diplomatic-victory.md  phase3-religious-victory.md  phase3-science-victory.md  phase4-religion.md  phase5-city-state-mechanics.md  phase5-later-era-trees.md  phase5-more-civilizations.md  phase5-world-wonders.md  phase6-performance.md  phase6-replay-viewer.md  phase6-rl-training-harness.md  phase6-save-load.md  status.md  todo.md
civsim/: Cargo.toml
civsim/src/: main.rs
libciv/: Cargo.toml
libciv/src/: enums.rs  ids.rs  lib.rs  visualize.rs  yields.rs
libciv/src/ai/: deterministic.rs  mod.rs
libciv/src/civ/: barbarian.rs  belief_defs.rs  city.rs  city_state.rs  city_state_defs.rs  civ_ability.rs  civ_identity.rs  civilization.rs  congress.rs  diplomacy.rs  district.rs  era.rs  governor.rs  great_people.rs  great_works.rs  grievance.rs  historic_moments.rs  mod.rs  religion.rs  tourism.rs  trade.rs  unit.rs
libciv/src/game/: apply_delta.rs  board.rs  diff.rs  mod.rs  production_helpers.rs  replay.rs  rules.rs  rules_helpers.rs  save_load.rs  score.rs  state.rs  turn.rs  victory.rs  visibility.rs
libciv/src/game/rules/: barbarians.rs  city.rs  combat.rs  diplomacy.rs  effects.rs  governors.rs  great_people.rs  mod.rs  movement.rs  production.rs  religion.rs  trade.rs  turn_phase.rs
libciv/src/rl/: action.rs  env.rs  mod.rs  observation.rs  reward.rs
libciv/src/rules/: building_defs.rs  civ_registry.rs  civic_tree_def.rs  effect.rs  government_defs.rs  mod.rs  modifier.rs  policy.rs  policy_defs.rs  project_defs.rs  promotion.rs  tech.rs  tech_tree_def.rs  unique.rs  unit_defs.rs  victory.rs  wonder_defs.rs
libciv/src/world/: climate.rs  disaster.rs  edge.rs  feature.rs  improvement.rs  mod.rs  resource.rs  road.rs  terrain.rs  tile.rs  wonder.rs
libciv/src/world/mapgen/: continents.rs  features.rs  mod.rs  resources.rs  rivers.rs  starts.rs  zones.rs
libciv/tests/: ai_agent.rs  ai_simulation.rs  alliances.rs  apply_delta.rs  barbarians.rs  builder.rs  civ_abilities.rs  climate.rs  combat_modifiers.rs  combat_terrain.rs  congress.rs  cultural_victory.rs  diff_consolidation.rs  diff_serde.rs  diplomatic_victory.rs  districts.rs  domination_victory.rs  era_score.rs  full_game.rs  game_state_invariants.rs  gameplay.rs  governors.rs  great_persons.rs  improvements.rs  los_cliff.rs  loyalty.rs  mapgen.rs  movement_domain.rs  natural_wonder_discovery.rs  natural_wonders.rs  power.rs  projects.rs  religion.rs  religion_spread.rs  replay.rs  rl_env.rs  rock_band.rs  save_load.rs  science_victory.rs  terrain_features.rs  (+4 more)
libciv/tests/common/: mod.rs
libcivcore/: Cargo.toml
libcivcore/src/: city.rs  civilization.rs  district.rs  governor.rs  great_people.rs  religion.rs  trade.rs  unit.rs
libcommon/: Cargo.toml
libcommon/src/: ids.rs  lib.rs  yields.rs
libgame/: Cargo.toml
libgame/src/: board.rs  rules.rs  state.rs  turn.rs
libhexgrid/: Cargo.toml
libhexgrid/src/: board.rs  coord.rs  lib.rs  types.rs
librules/: Cargo.toml
librules/src/: lib.rs  modifier.rs  policy.rs  tech.rs
libworld/: Cargo.toml
libworld/src/: resource.rs  road.rs  tile.rs  wonder.rs
open4x-api/: Cargo.toml
open4x-api/src/: coord.rs  enums.rs  ids.rs  lib.rs  messages.rs  profile.rs  view.rs
open4x-cli/: Cargo.toml
open4x-cli/src/: cli.rs  main.rs  output.rs  player_view.rs  state_io.rs
open4x-cli/src/handlers/: action.rs  end_turn.rs  list.rs  mod.rs  new_game.rs  status.rs  view.rs
open4x-cli/src/repl/: formatter.rs  mod.rs  parser.rs  prompt.rs  short_ids.rs
open4x-cli/tests/: cli_integration.rs
open4x-server/: Cargo.toml  index.html
open4x-server/src/: auth.rs  demo.rs  game_room.rs  lib.rs  main.rs  persist.rs  projection.rs  session.rs  state.rs  templates.rs  ws.rs
open4x-server/src/components/: client_auth.rs  hexmap.rs  mod.rs  ws.rs
open4x-server/src/pages/: game.rs  mod.rs  replay.rs
open4x-server/src/server/: api.rs  api_token.rs  demo.rs  game_room.rs  mod.rs  persist.rs  projection.rs  reports.rs  session.rs  state.rs  templates.rs  ws.rs
open4x-server/src/tabs/: city.rs  climate.rs  culture.rs  data_reports.rs  governors.rs  great_people.rs  mod.rs  players.rs  science.rs
open4x-server/src/types/: enums.rs  ids.rs  messages.rs  mod.rs  profile.rs  reports.rs  view.rs
open4x-web/: Cargo.toml  index.html
open4x-web/src/: hexmap.rs  lib.rs  session.rs  ws.rs
open4x-web/src/pages/: game.rs  mod.rs  replay.rs
plan/: TODO.md
plans/: BUILDER_CHARGES_ROAD_PLACEMENT.md  ERA_SCORE.md  GREAT_PERSONS.md  SCIENCE_VICTORY.md  VICTORY_CONDITION.md
