[workspace]
members = [
    "libhexgrid",
    "libciv",
    "open4x-server",
    "civsim",
]
resolver = "2"

[workspace.dependencies]
ulid = { version = "1", features = ["serde"] }
rand = "0.9"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
