[package]
name = "libciv"
version = "0.1.0"
edition = "2024"

[dependencies]
libhexgrid = { path = "../libhexgrid" }
ulid = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "libhexgrid/serde"]
