[package]
name = "open4x-server"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "open4x-server"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
# ── Shared (both targets) ──────────────────────────────────────────────
serde       = { workspace = true }
serde_json  = { workspace = true }
ulid        = { workspace = true }
ed25519-dalek = { workspace = true }
rand        = { workspace = true }

# ── Server-only (native binary) ───────────────────────────────────────
libciv      = { path = "../libciv", optional = true }
libhexgrid  = { path = "../libhexgrid", optional = true }
axum        = { version = "0.8", features = ["ws"], optional = true }
tokio       = { workspace = true, optional = true }
dashmap     = { version = "6", optional = true }
tower-http  = { version = "0.6", features = ["cors", "fs"], optional = true }

# ── Client-only (WASM frontend) ───────────────────────────────────────
leptos      = { version = "0.7", features = ["csr"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys      = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys     = { version = "0.3", features = [
    "Blob", "BlobPropertyBag", "Document",
    "HtmlAnchorElement", "HtmlInputElement", "Url", "Window",
    "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent",
    "Storage",
    "Response", "Headers", "RequestInit", "Request",
], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom   = { version = "0.3", features = ["wasm_js"], optional = true }

[features]
default = ["ssr"]
ssr = [
    "dep:libciv", "dep:libhexgrid",
    "dep:axum", "dep:tokio",
    "dep:dashmap", "dep:tower-http",
]
csr = [
    "dep:leptos", "dep:wasm-bindgen", "dep:console_error_panic_hook",
    "dep:js-sys", "dep:wasm-bindgen-futures", "dep:web-sys",
    "dep:serde-wasm-bindgen", "dep:getrandom",
]
